--- a/style.css
+++ b/style.css
@@ -485,23 +485,40 @@ p {
     align-items: center;
   }
 }
+
+/* Keep request page card horizontal on all sizes */
+.main.request__page .book-card__inner {
+  flex-direction: row;
+  align-items: center;
+}
+
+.main.request__page .book-card__cover {
+  width: 141px;
+  height: auto;
+}
+
+.main.request__page .book-card__image {
+  width: 141px;
+  height: 218px;
+}
+
 .book-card__cover {
   flex-shrink: 0;
   position: relative;
   width: 100%;
-  height: auto;
+  height: 262px;
 }
 
 @media (min-width: 400px) {
   .book-card__cover {
     width: 141px;
+    height: auto;
   }
 }
 
 .book-card__image {
   width: 100%;
-  height: auto;
-  max-width: 141px;
+  height: 262px;
   border-radius: var(--border-radius-md);
   object-fit: cover;
   object-position: top;
@@ -512,7 +529,6 @@ p {
   .book-card__image {
     width: 141px;
     height: 218px;
-    max-width: none;
   }
 }
 
