--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ p {
 
 .book-card__image {
   width: 100%;
-  height: 262px;
+  height: 100%;
   border-radius: var(--border-radius-md);
   object-fit: cover;
   object-position: top;
@@ -1098,5 +1098,4 @@ p {
 .btn--ghost:focus-visible {
   text-decoration: underline;
   color: var(--color-btn-focus);
-}
 }
