--- a/style.css
+++ b/style.css
@@ -526,7 +526,7 @@ p {
   flex-shrink: 0;
   position: relative;
   width: 100%;
-  height: 262px;
+  height: 200px;
   padding: var(--spacing-sm);
 }
 
@@ -563,11 +563,21 @@ p {
 
 .book-card__image {
   width: 100%;
-  height: 262px;
+  height: 180px;
   border-radius: var(--border-radius-md);
   object-fit: cover;
   object-position: top;
   display: block;
+}
+
+@media (min-width: 400px) {
+  .book-card__cover {
+    height: 262px;
+  }
+
+  .book-card__image {
+    height: 262px;
+  }
 }
 
 .request-card {
