--- a/style.css
+++ b/style.css
@@ -563,7 +563,7 @@ p {
 
 .book-card__image {
   width: 100%;
-  height: 180px;
+  height: 180px !important;
   border-radius: var(--border-radius-md);
   object-fit: cover;
   object-position: top;
@@ -572,11 +572,11 @@ p {
 
 @media (min-width: 400px) {
   .book-card__cover {
-    height: 262px;
+    height: 262px !important;
   }
 
   .book-card__image {
-    height: 262px;
+    height: 262px !important;
   }
 }
 
