--- a/style.css
+++ b/style.css
@@ -526,8 +526,9 @@ p {
   flex-shrink: 0;
   position: relative;
   width: 100%;
-  height: 180px;
+  height: 180px !important;
   padding: var(--spacing-sm);
+  box-sizing: border-box;
 }
 
 .book-card__save {
